<?xml version="1.0"?>
<package format="2">
  <name>robot_calibration_apriltag</name>
  <version>0.0.0</version>
  <description>The robot_calibration_apriltag package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <author email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>apriltag_ros</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <depend>robot_calibration</depend>
  <depend>robot_calibration_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <robot_calibration plugin="${prefix}/robot_calibration.xml"/>
  </export>
</package>
